# Octant_CYP_blog_post

./: .envrc  .gitignore  .renvignore  CLAUDE.md  README.md  _quarto-notebook.yml  _quarto.yml  cyp-blog-post.qmd  index.html  index.qmd  pyproject.toml
.github/workflows/: render-deploy.yml
R/: helpers.R
_site/: index.html
cyp-blog-post_files/libs/bootstrap/: bootstrap-36077f698d49919a735b975ed4fb6a75.min.css
data/: OPA_C3A4TDIA_005_LMO.csv  buffer_activity.tsv  citations.tsv  clearance_snippet.tsv  evaporation.tsv  inhibition.csv  inhibition.tsv  inhibition_wells.tsv  reactivity.csv  reactivity.tsv  reactivity_processed.tsv  tdi_drc_curves.tsv  tdi_drc_params.tsv  tdi_drc_points.tsv  tdi_pic50_shift.tsv  willitfly.tsv
data/raw/: 2025-09-10_selected-cpds.tsv  20260209_CBR-1304-cpds_vs_CYP3A4,2J2_primary_ind-reps_filtered.csv  blog_post_revision.txt  blog_post_text.html
data/rds/: RWT112_anno_data_df.RDS  RWT115_anno_data_df.RDS  RWT92_norm_data.RDS  Willitfly_NH4FvsAmFormate_comparison_df.rds
figures/: figure_1.qmd  figure_2.qmd  figure_3.qmd
post/: _setup_python.qmd  _setup_r.qmd  styles.css
post/figures/: banner_drc_animation.qmd  banner_drc_animation_py.qmd  figure_1.qmd  figure_1b.qmd  figure_2.qmd  figure_3.qmd  figure_4.qmd  figure_6.qmd  figure_7.qmd
protocols/: cyp_inhibition_assay.md  cyp_reactivity_assay.md
scripts/: argo_api.py  assemble_blog.py  convert_drc_to_webp.py  extract_og_image.py  fetch_blog_text.R  fetch_citations.R  prepare_clearance.R  prepare_data.py  prepare_figure4.R  prepare_tdi.R  prepare_willitfly.R  update_smiles.py
(+2 files in other folders)
